--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@
 
 body{
   margin:0px;
-  font-family: Arial, helvetica, sans-serif;
+  font-family: Quicksand, sans-serif;
   font-size: 18px;
+}
+a{
+  text-decoration: none;
 }
